correction contrast 1

--- a/style.css
+++ b/style.css
@@ -785,7 +785,7 @@ h4 {
 }
 
 .tc-white {
-	color: #421e0c;
+	color: #bf5921;
 }
 
 .btn-atomic-tangerine {
